final fix on mobile

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -7,19 +7,18 @@
     text-align: center;
     // border: 2px solid red;
     font-size: 2.8rem;
-    font-family: 'Dancing Script', cursive;
+    font-family: "Dancing Script", cursive;
     font-weight: 700;
     color: var(--paprika);
-    
   }
 }
 
 @media only screen and (min-width: 768px) {
-    .footer {
-        background: var(--vanilla-ice);
-        h2 {
-          color: var(--paprika);
-
-        }
+  .footer {
+    background: var(--vanilla-ice);
+    h2 {
+      color: var(--paprika);
+      font-size: 4rem;
     }
+  }
 }
